[package]
name = "s3_gateway_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.203"
salvo = { version = "0.68.4", features=["cors", "proxy", "logging"] }
tokio = { version = "1.38.0", features = ["macros"] }
serde_json = "1.0.118"
log = "0.4.21"
simple_logger = "5.0.0"
minio = "0.1.0"
http = "0.2.12"
regex = "1.10.5"
mime_guess = "2.0.4"

[[bin]]
name = "server"
